@@ -18,6 +18,7 @@ TRUNK
 * added cycle detection to algebra expressions
 * mxEval() with compute = TRUE will assign dimnames to algebras
 * added dimnames checking of algebras in the front-end before optimization is called
+* added 'make rproftest' target to makefile
 
 Release 0.1.3-776
 =============
